--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ img {
     margin-left: 0;
   }
   .boxes {
+     grid-column-gap:16px;
     padding: 0 16em;
     display: grid;
     grid-template-columns: auto auto auto;
